unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/adroll__Rollworks_Report_Automation_Schedules__c.object-meta.xml
<CustomObject>
    <description>Schedule Details for the Report Export options are stored in this object</description>
    <label>Rollworks Report Automation Schedules</label>
    <nameField>
        <displayFormat>RRASCH-{000000}</displayFormat>
        <label>Rollworks Report Automation Schedules Nu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollworks Report Automation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>