unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Repeat_Schedule_in_Weeks__c.field-meta.xml
<CustomField>
    <fullName>adroll__Repeat_Schedule_in_Weeks__c</fullName>
    <inlineHelpText>Export Repeat schedule</inlineHelpText>
    <label>Repeat Schedule in Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>