unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Rollworks_Report_Automation_Setting__c.field-meta.xml
<CustomField>
    <fullName>adroll__Rollworks_Report_Automation_Setting__c</fullName>
    <description>Linked to Master Record</description>
    <label>Rollworks Report Automation Setting</label>
    <referenceTo>adroll__Rollworks_Report_Automation_Settings__c</referenceTo>
    <relationshipLabel>Rollworks Report Automation Schedules</relationshipLabel>
    <relationshipName>Rollworks_Report_Automation_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>