unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>adroll__Schedule_Day__c</fullName>
    <description>For the Schedule Type weekly option this Schedule day will be used</description>
    <inlineHelpText>For the Schedule Type weekly option this Schedule day will be used</inlineHelpText>
    <label>Schedule Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>