unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>adroll__Schedule_End_Date__c</fullName>
    <description>Schedule expiry date</description>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>