unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>adroll__Schedule_Type__c</fullName>
    <description>Daily Weekly Monthly option</description>
    <inlineHelpText>Daily Weekly Monthly option</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>