unpackaged/main/default/objects/adroll__Rollworks_Report_Automation_Schedules__c/fields/adroll__Sunday__c.field-meta.xml
<CustomField>
    <fullName>adroll__Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Day on which the Schedule runs</description>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>